[project]
name = "open-learning-ai-tutor"
version = "0.2.16"
description = "AI powered tutor"
authors = [{ name = "MIT ODL" }]
requires-python = ">=3.12,<3.15"
readme = "README.md"
dependencies = [
    "langchain>=1.0.0,<2.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-experimental>=0.4,<0.5",
    "e2b-code-interpreter>=1.1.0,<2",
    "langsmith (>=0.9,<0.10)",
]

[tool.uv]
constraint-dependencies = [
    "orjson>=3.10.16",
    "ormsgpack>=1.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-mock>=3.14.0,<4",
    "pytest-asyncio>=1.0.0,<2",
    "black>=26.3.1,<27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
